ReSharper.FSharp/test/data/parsing/errors/Expr - Unfinished let 03 - Inline in.fs
module Module

do
    if (let x = 1 in) then ()
